src/objects/Church__c.object
<CustomObject>
    <description>Represents a church for the Contact</description>
    <fields>
        <fullName>Church_Name__c</fullName>
        <description>The name of the church</description>
        <label>Church Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Church Account for this church record.</description>
        <inlineHelpText>The Church Account for this church record.</inlineHelpText>
        <label>Church</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Church</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Church</relationshipLabel>
        <relationshipName>Church</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The church city</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The person for this church record</description>
        <inlineHelpText>The person for this church record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Church</relationshipLabel>
        <relationshipName>Church</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <description>The denomination of the church</description>
        <inlineHelpText>The denomination of the church</inlineHelpText>
        <label>Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Denominations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>The holding name for the church if a Church Account is not found. Required EASY field for a custom object</description>
        <inlineHelpText>The holding name for the church</inlineHelpText>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Church_Id__c</fullName>
        <description>Temporary field used for migration which can be deleted shortly after migration is complete.</description>
        <externalId>true</externalId>
        <label>Previous Church Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field for a custom object</inlineHelpText>
        <label>Related Object JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The church state</description>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Church</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Church__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Church Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Church</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>